# django-tutorial

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: fatture.txt  orm.txt
mysite/: settings.py  urls.py  views.py
polls/: admin.py  models.py  test.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_question_pub_date.py
polls/templates/polls/: detail.html  index.html
ticketing/: urls.py  views.py
